style: complete component styling

--- a/style.css
+++ b/style.css
@@ -14,19 +14,53 @@ body {
     font-family: 'Lexend Deca', sans-serif;
     font-size: .9375rem;
     font-weight: 400;
+    line-height: 1.5rem;
     color: white;
 }
 .preview-card {
-    border: 1px red solid;
     display: flex;
+    max-width: 57rem;
+    height: 29rem;
+
+    border-radius: .5rem;
+    overflow: hidden;
 }
 h1 {
     text-transform: uppercase;
     font-family: 'Big Shoulders', sans-serif;
-    font-size: 2rem;
+    font-size: 2.7rem;
+    color: hsl(0, 0%, 95%);
 }
 p {
-    color: hsla(0, 0%, 100%, 0.75);
+    color: hsla(0, 0%, 100%, 0.6);
+}
+.preview-card__column {
+    padding: 3rem;
+    gap: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+img {
+    width: 4rem;
+}
+button {
+    margin-top: auto;
+    font: inherit;
+    cursor: pointer;
+    border: none;
+    background-color: hsl(0, 0%, 95%);
+    padding: .7rem;
+    width: 9rem;
+    border-radius: 3rem;
+}
+.preview-card__button--sedan {
+    color: hsl(31, 77%, 52%);
+}
+.preview-card__button--suv {
+    color: hsl(184, 100%, 22%);
+}
+.preview-card__button--luxury {
+    color: hsl(179, 100%, 13%);
 }
 .preview-card__column--sedan {
     background-color: hsl(31, 77%, 52%);
