--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ button {
     padding: .7rem;
     width: 9rem;
     border-radius: 3rem;
+    border: 2px solid hsl(0, 0%, 95%);
+}
+button:hover {
+    background-color: transparent;
+    color: hsl(0, 0%, 95%);
+    border-color: hsl(0, 0%, 95%);
 }
 .preview-card__button--sedan {
     color: hsl(31, 77%, 52%);
