--- a/style.css
+++ b/style.css
@@ -35,16 +35,19 @@ p {
     color: hsla(0, 0%, 100%, 0.6);
 }
 .preview-card__column {
+    position: relative;
     padding: 3rem;
     gap: 2rem;
     display: flex;
+    height: 100%;
     flex-direction: column;
 }
 img {
     width: 4rem;
 }
 button {
-    margin-top: auto;
+    position: absolute;
+    bottom: 3rem;
     font: inherit;
     cursor: pointer;
     border: none;
@@ -76,4 +79,20 @@ button:hover {
 }
 .preview-card__column--luxury {
     background-color: hsl(179, 100%, 13%);
+}
+
+@media (max-width: 900px) {
+    body {
+        padding: 2rem;
+    }
+    .preview-card {
+        flex-direction: column;
+        height: auto;
+        width: auto;
+        max-width: 25rem;
+        min-width: 20rem;
+    }
+    .preview-card__column {
+        height: 27rem;
+    }
 }
